# live-stream-to-ndi

./: Readme.md
docker/: build_base_dockers.sh  build_dev_docker.sh  image_version.sh
docker/base/: Dockerfile
docker/boost/: Dockerfile
docker/dev/: Dockerfile  Dockerfile.dev
src/: CMakeLists.txt
src/CMakeModules/: Bootstrap_Linux.cmake
src/app/: CMakeLists.txt  main_udp_to_ndi.cpp
src/common/: CMakeLists.txt  config.cpp  config.h  log.h  thread.cpp  thread.h  utf.cpp  utf.h
src/ffmpeg/: av_input.cpp  av_input.h
src/ffmpeg/util/: av_assert.h  av_util.cpp  av_util.h
